--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "graphql": "^15.5.0",
+    "highcharts": "^9.0.1",
+    "highcharts-react-official": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-helmet-async": "^1.0.7",
     "react-hook-form": "^6.15.4",
