--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "chart.js": "^3.0.2",
     "chartjs": "^0.3.24",
     "graphql": "^15.5.0",
     "highcharts": "^9.0.1",
